--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  margin-top: 5px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.dark-mode {
+  background-color: black;
+  color: #fff;
+}
+
+.light-mode {
+  background-color: #fff;
+  color: black;
+}
+
+h1 {
+  color: blueviolet;
+  font-size: 35px;
+  font-weight: 600;
+  margin-top: 0;
+}
+
+.todo-list {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
+  flex-grow: 1;
+  margin: 20px;
 }
